--- a/wp-content/themes/bikers/style.css
+++ b/wp-content/themes/bikers/style.css
@@ -115,15 +115,51 @@ li {
   width: 86%; 
   margin: 0 auto;
 }
+
+/*=================================
+  custom styling starts here
+=================================*/
+:root {
+  --primary-color: #808080;
+}
+
+main { padding: 20px 0; }
+/*=================================
+  custom styling ends here
+=================================*/
+
 /*=================================
   Header styling starts here
 =================================*/
+header { background: var(--primary-color); }
 
+header .wrapper {
+  padding: 25px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
+.main-logo {
+  color: #fff;
+  font-size: 22px;
+  font-weight: 700;
+}
 
+.navbar-primary { flex-basis: 70%; }
 
+.menu {
+  display: flex;
+  justify-content: flex-end;
+}
 
+.menu-list { margin-left: 4%; }
 
+.menu-item {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 600;
+}
 /*=================================
   Header styling ends here
 =================================*/  
@@ -131,7 +167,74 @@ li {
 /*=================================
   main styling starts here
 =================================*/
+/* bike listing page styling started here */
+.filter-search {
+  display: flex;
+  align-items: center;
+}
 
+.filter {
+  margin-right: 4%;
+  flex-basis: 30%;
+}
+
+.filter-taxonomy {
+  width: 100%;
+  padding: 4px;
+  font-size: 18px;
+}
+
+.search-field {
+  padding: 4px;
+  font-size: 18px;
+}
+
+.post-container {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.post-list {
+  flex-basis: 30%;
+  box-shadow: 0 0 10px #000;
+}
+
+.post-title {
+  padding: 14px 0;
+  display: block;
+  color: #000;
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.content-paragraph {
+  font-size: 14px;
+  margin: 10px;
+}
+
+.color-taxonomy {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.post-date,
+.color-name {
+    color: var(--primary-color);
+}
+
+.date { margin: 10px; }
+
+.load-more { margin-top: 20px; }
+
+.load-more-button {
+  padding: 10px;
+  border: 1px solid #000;
+  color: #000;
+}
+/* bike listing page styling ended here */
 
 
 
